syntax = "proto3";

package pbdingding;

message SendDingMessageRequest {
  message Content {
    message Body {
      message Form {
        string key = 1;
        string value = 2;
      }
      message Rich {
        string num = 1;
        string unit = 2;
      }
      string author = 1;
      string content = 2;
      string file_count = 3;
      repeated Form form = 4;
      string image = 5;
      Rich rich = 6;
      string title = 7;
    }
    message Head {
      string bgcolor = 1;
      string text = 2;
    }
    Body body = 1;
    Head head = 2;
    string message_url = 3;
  }
  Content content = 1;
  string msgType = 2;
  repeated string recipients = 3;
  string method = 4;
}

message SendDingMessageResponse {
  int32 dingOpenErrorCode = 1;
  string errorMsg = 2;
  bool success = 3;
  int64 taskID = 4;
  string requestID = 5;
}

message GetJssdkSignRequest {
  string url = 1;
}
message GetJssdkSignResponse {
  string agentId = 1;
  string corpId = 2;
  string nonceStr = 3;
  string timestamp = 4;
  string signature = 5;
  string url = 6;
}

message GetDingUserInfoRequest {
  string tmpAuthCode = 1;
}
message GetDingUserInfoResponse {
  string maskedMobile = 1;
  string nick = 2;
  string unionid = 3;
  string dingId = 4;
  string openid = 5;
  string snsToken = 6;
}

message Departments {
  message Department {
    int64 id = 1;
    string name = 2;
    int64 parentID = 3;
  }
  repeated Department departments = 1;
}
message GetDepartmentsRequest {
}

message GetUsersInDepartmentRequest {
  int64 departmentID = 1;
}
message UsersInDepartment {
  message User {
    string userID = 1;
    string name = 2;
  }
  repeated User users = 1;
}
service DingDing {
  rpc SendMessage (SendDingMessageRequest) returns (SendDingMessageResponse);
  rpc GetJssdkSign (GetJssdkSignRequest) returns (GetJssdkSignResponse);
  rpc GetDingUserInfo (GetDingUserInfoRequest) returns (GetDingUserInfoResponse);
  rpc GetDepartments(GetDepartmentsRequest) returns (Departments);
  rpc GetUsersInDepartment(GetUsersInDepartmentRequest) returns (UsersInDepartment);
}
